tests/it/snapshots/it__completion__latex__kernel_command.snap
---
source: tests/it/completion.rs
assertion_line: 414
expression: "complete_and_resolve(&server, uri, 0, 2)?"
---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "documentclass",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 1
          },
          "end": {
            "line": 0,
            "character": 14
          }
        },
        "newText": "documentclass"
      }
    }
  ]
}
