tests/it/snapshots/it__completion__latex__label.snap
---
source: tests/it/completion.rs
assertion_line: 699
expression: "complete_and_resolve(&server, uri, 4, 5)?"
---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "eq:bar",
      "kind": 1,
      "detail": "Equation (2)",
      "preselect": false,
      "sortText": "00 eq:bar Equation (2)",
      "filterText": "eq:bar Equation (2)",
      "textEdit": {
        "range": {
          "start": {
            "line": 4,
            "character": 5
          },
          "end": {
            "line": 4,
            "character": 5
          }
        },
        "newText": "eq:bar"
      }
    },
    {
      "label": "eq:foo",
      "kind": 1,
      "detail": "Equation (1)",
      "preselect": false,
      "sortText": "01 eq:foo Equation (1)",
      "filterText": "eq:foo Equation (1)",
      "textEdit": {
        "range": {
          "start": {
            "line": 4,
            "character": 5
          },
          "end": {
            "line": 4,
            "character": 5
          }
        },
        "newText": "eq:foo"
      }
    },
    {
      "label": "fig:baz",
      "kind": 1,
      "detail": "Figure 1",
      "documentation": "Baz",
      "preselect": false,
      "sortText": "02 fig:baz Figure 1: Baz",
      "filterText": "fig:baz Figure 1: Baz",
      "textEdit": {
        "range": {
          "start": {
            "line": 4,
            "character": 5
          },
          "end": {
            "line": 4,
            "character": 5
          }
        },
        "newText": "fig:baz"
      }
    },
    {
      "label": "sec:bar",
      "kind": 1,
      "detail": "Section 2 (Bar)",
      "preselect": false,
      "sortText": "03 sec:bar Section 2 (Bar)",
      "filterText": "sec:bar Section 2 (Bar)",
      "textEdit": {
        "range": {
          "start": {
            "line": 4,
            "character": 5
          },
          "end": {
            "line": 4,
            "character": 5
          }
        },
        "newText": "sec:bar"
      }
    },
    {
      "label": "sec:foo",
      "kind": 1,
      "detail": "Section 1 (Foo)",
      "preselect": false,
      "sortText": "04 sec:foo Section 1 (Foo)",
      "filterText": "sec:foo Section 1 (Foo)",
      "textEdit": {
        "range": {
          "start": {
            "line": 4,
            "character": 5
          },
          "end": {
            "line": 4,
            "character": 5
          }
        },
        "newText": "sec:foo"
      }
    },
    {
      "label": "thm:foo",
      "kind": 1,
      "detail": "Lemma 1",
      "preselect": false,
      "sortText": "05 thm:foo Lemma 1",
      "filterText": "thm:foo Lemma 1",
      "textEdit": {
        "range": {
          "start": {
            "line": 4,
            "character": 5
          },
          "end": {
            "line": 4,
            "character": 5
          }
        },
        "newText": "thm:foo"
      }
    }
  ]
}
